@@ -53,7 +53,7 @@ Config::Config(QWidget *parent, PianoKeybdCustom *keyboard, AudioDevice * audioD
     _keyboard(keyboard)
 {
     ui->setupUi(this);
-    this->setWindowFlags(windowFlags() & ~Qt::WindowContextHelpButtonHint | Qt::Tool);
+    this->setWindowFlags((windowFlags() & ~Qt::WindowContextHelpButtonHint) | Qt::Tool);
 
 #ifdef Q_OS_MAC
     ui->groupBox->layout()->setMargin(10);
