@@ -31,7 +31,7 @@ DialogList::DialogList(QWidget *parent) :
     ui(new Ui::DialogList)
 {
     ui->setupUi(this);
-    this->setWindowFlags(windowFlags() & ~Qt::WindowContextHelpButtonHint | Qt::Tool);
+    this->setWindowFlags((windowFlags() & ~Qt::WindowContextHelpButtonHint) | Qt::Tool);
 }
 
 DialogList::~DialogList()
